# dbms-cpp-backend

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  binding.gyp  cmake_install.cmake  index.js  log.txt  package-lock.json  package.json  readme.MD.md  test_block.sln  test_block.vcxproj  test_block.vcxproj.filters
.vscode_backup/: c_cpp_properties.json  launch.json  settings.json  tasks.json
include/glad/: glad.h
scripts/: main.py
scripts/fundamentus_api/: out.csv  teste.csv
src/: Stock.hpp  StockPrice.hpp  glad.c  imgui.ini  main.cpp  main_final.cpp
src/controller/: indexController.cpp  indexController.hpp  linearSearchController.cpp  linearSearchController.hpp  stateController.cpp  stateController.hpp
src/database/: context.cpp  context.hpp
src/dbms/controller/: controller.cpp
src/dbms/db/: db_context.cpp  db_context.hpp
src/dbms/index/: Trie.hpp
src/dbms/models/: stock.hpp
src/index/: blockStorage.cpp  blockStorage.hpp  trie.cpp  trie.hpp
src/logger/: logger.cpp  logger.hpp
src/model/: company.hpp  stock.hpp  stockPrice.hpp  stock_price.hpp
src/napi/: dbms.cpp
src/node-addon/: dbms.cpp  lc.cpp  lc.hpp  sc.cpp  sc.hpp  tc.cpp  tc.hpp
src/test/: database  db_context.hpp  dbms_db.cpp  intDb.db  test_block.cpp  test_controller_index.cpp  test_controller_linear.cpp  test_db_context.cpp  test_loader.cpp  test_trie.cpp
